--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.3",
     "pg": "^8.2.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
